--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -1,6 +1,9 @@
-<form ng-submit="modal.ok()">
-    <input type="text" ng-model="modal.name" autofocus>{{modal.name}}
+<div class="modal-body">
+    <form ng-submit="modal.ok()">
+        <input class="form-control finderBar" type="text" ng-model="modal.name" autofocus>
+    </form>
     <br>
-    <button ng-click = "modal.cancel()">cancel</button>
+    <button ng-click="modal.cancel()">cancel</button>
     <button ng-click="modal.ok()">Ok</button>
-</form>
+    
+</div>
