--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,9 @@
-<h1 ng-repeat="room in room.rooms "><p ng-click ="room.changeRoom(room)">{{room.$value}}</p></h1>
+<h1 ng-repeat=" thisroom in room.rooms "><p ng-click ="room.changeRoom(thisroom)">{{thisroom.$value}}</p>
+</h1>
 <div ng-controller="ModalCtrl as modal">
     <button ng-click= "modal.open()">New room</button>
 </div>
+<h2>{{currentRoom.$value}}</h2>
+<table>
+    <tr ng-repeat = "message in messages track by $index"><td>{{message.username}}: {{message.content}}</td></tr>
+</table>
