--- a/app/templates/usernamemodal.html
+++ b/app/templates/usernamemodal.html
@@ -1,8 +1,8 @@
 <div class="modal-body">
-    <form ng-submit="modalUN.ok()">
+    <form ng-submit="ok()">
         <input class="form-control finderBar" type="text" ng-model="modal.name" autofocus>
     </form>
     <br>
-    <button ng-click="modalUN.ok()">Ok</button>
+    <button ng-click="ok()">Ok</button>
     
 </div>
